@@ -1,4 +1,6 @@
 {{$NEXT}}
+          - Replace with an empty array reference instead of an empty string
+            in th ecase of an array with no HASH or ARRAY values (thanks steveb)
           - Remove un-needed portion of conditional (thanks rafl)
 
 0.05      2015-08-03 12:34:15-06:00 America/Denver
